--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
                     {{alumn.email}}
                 </td> 
                 <td class="px-6 py-4">
-                    <a href="#" class="font-medium text-fg-brand hover:underline">Editar</a>
+                    <a href="modificar?id={{ alumn.id }}" class="font-medium text-fg-brand hover:underline">Editar</a>
                 </td>
                 <td class="px-6 py-4">
-                    <a href="#" class="font-medium text-fg-brand hover:underline">Detalles</a>
+                    <a href="detalles?id={{ alumn.id }}" class="font-medium text-fg-brand hover:underline">Detalles</a>
                 </td>
                 <td class="px-6 py-4">
                     <a href="#" class="font-medium text-fg-brand hover:underline">Eliminar</a>
